--- a/index.html
+++ b/index.html
@@ -1,12 +1,30 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="Pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flexbox-Resumo</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>ola</h1>
+    <div class="justify-content">
+        <h1>justify-content</h1>
+        <div class="flex-start">
+            <h2>Flex-start</h2>
+            <div class="box">
+                <div class="unit">1</div>
+                <div class="unit">2</div>
+                <div class="unit">3</div>
+                <div class="unit">4</div>
+                <div class="unit">5</div>
+                <div class="unit">6</div>
+                <div class="unit">7</div>
+                <div class="unit">8</div>
+                <div class="unit">9</div>
+                <div class="unit">10</div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
