--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
 <body>
     <div class="justify-content">
         <h1>justify-content</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est cum numquam fugiat laboriosam. Architecto qui sed maiores aperiam velit expedita dicta. Tempore, consequuntur sit nostrum nihil quisquam tenetur! Aperiam, reiciendis!</p>
         <div class="flex-start">
             <h2>Flex-start</h2>
-            <p>test</p>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deserunt ipsam tempora eligendi? Cupiditate accusantium soluta fugit pariatur vel at iure fugiat dolorem ab. Laborum recusandae aspernatur, obcaecati sed sequi illo?</p>
             <div class="box">
                 <div class="unit">1</div>
                 <div class="unit">2</div>
