--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
         <h1>justify-content</h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est cum numquam fugiat laboriosam. Architecto qui sed maiores aperiam velit expedita dicta. Tempore, consequuntur sit nostrum nihil quisquam tenetur! Aperiam, reiciendis!</p>
         <div class="flex-start">
+            <details>
+                <summary>Flex-start</summary>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deserunt ipsam tempora eligendi? Cupiditate accusantium soluta fugit pariatur vel at iure fugiat dolorem ab. Laborum recusandae aspernatur, obcaecati sed sequi illo?</p>
+            </details>
             <h2>Flex-start</h2>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deserunt ipsam tempora eligendi? Cupiditate accusantium soluta fugit pariatur vel at iure fugiat dolorem ab. Laborum recusandae aspernatur, obcaecati sed sequi illo?</p>
             <div class="box">
