--- a/index.html
+++ b/index.html
@@ -8,29 +8,172 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="justify-content">
-        <h1>justify-content</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est cum numquam fugiat laboriosam. Architecto qui sed maiores aperiam velit expedita dicta. Tempore, consequuntur sit nostrum nihil quisquam tenetur! Aperiam, reiciendis!</p>
-        <div class="flex-start">
-            <details>
-                <summary>Flex-start</summary>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deserunt ipsam tempora eligendi? Cupiditate accusantium soluta fugit pariatur vel at iure fugiat dolorem ab. Laborum recusandae aspernatur, obcaecati sed sequi illo?</p>
-            </details>
-            <h2>Flex-start</h2>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deserunt ipsam tempora eligendi? Cupiditate accusantium soluta fugit pariatur vel at iure fugiat dolorem ab. Laborum recusandae aspernatur, obcaecati sed sequi illo?</p>
-            <div class="box">
-                <div class="unit">1</div>
-                <div class="unit">2</div>
-                <div class="unit">3</div>
-                <div class="unit">4</div>
-                <div class="unit">5</div>
-                <div class="unit">6</div>
-                <div class="unit">7</div>
-                <div class="unit">8</div>
-                <div class="unit">9</div>
-                <div class="unit">10</div>
+    <section class="leftSection">
+        <div class="propriedade">
+            <h1>justify-content</h1>
+            <div class="atributo">
+                <details>
+                    <summary>Flex-start</summary>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deserunt ipsam tempora eligendi? Cupiditate accusantium soluta fugit pariatur vel at iure fugiat dolorem ab. Laborum recusandae aspernatur, obcaecati sed sequi illo?</p>
+                </details>
+                <div class="box box_1">
+                    <div class="unit">1</div>
+                    <div class="unit">2</div>
+                    <div class="unit">3</div>
+                    <div class="unit">4</div>
+                    <div class="unit">5</div>
+                    <div class="unit">6</div>
+                    <div class="unit">7</div>
+                </div>
+            </div>
+            <div class="atributo">
+                <details>
+                    <summary>Center</summary>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deserunt ipsam tempora eligendi? Cupiditate accusantium soluta fugit pariatur vel at iure fugiat dolorem ab. Laborum recusandae aspernatur, obcaecati sed sequi illo?</p>
+                </details>
+                <div class="box box_2">
+                    <div class="unit">1</div>
+                    <div class="unit">2</div>
+                    <div class="unit">3</div>
+                    <div class="unit">4</div>
+                    <div class="unit">5</div>
+                    <div class="unit">6</div>
+                    <div class="unit">7</div>
+                </div>
+            </div>
+            <div class="atributo">
+                <details>
+                    <summary>Flex-end</summary>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deserunt ipsam tempora eligendi? Cupiditate accusantium soluta fugit pariatur vel at iure fugiat dolorem ab. Laborum recusandae aspernatur, obcaecati sed sequi illo?</p>
+                </details>
+                <div class="box box_3">
+                    <div class="unit">1</div>
+                    <div class="unit">2</div>
+                    <div class="unit">3</div>
+                    <div class="unit">4</div>
+                    <div class="unit">5</div>
+                    <div class="unit">6</div>
+                    <div class="unit">7</div>
+                </div>
+            </div>
+            <div class="atributo">
+                <details>
+                    <summary>Space-around</summary>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deserunt ipsam tempora eligendi? Cupiditate accusantium soluta fugit pariatur vel at iure fugiat dolorem ab. Laborum recusandae aspernatur, obcaecati sed sequi illo?</p>
+                </details>
+                <div class="box box_4">
+                    <div class="unit">1</div>
+                    <div class="unit">2</div>
+                    <div class="unit">3</div>
+                </div>
+            </div>
+            <div class="atributo">
+                <details>
+                    <summary>Space-between</summary>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deserunt ipsam tempora eligendi? Cupiditate accusantium soluta fugit pariatur vel at iure fugiat dolorem ab. Laborum recusandae aspernatur, obcaecati sed sequi illo?</p>
+                </details>
+                <div class="box box_5">
+                    <div class="unit">1</div>
+                    <div class="unit">2</div>
+                    <div class="unit">3</div>
+                </div>
+            </div>
+            <div class="atributo">
+                <details>
+                    <summary>Space-evenly</summary>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deserunt ipsam tempora eligendi? Cupiditate accusantium soluta fugit pariatur vel at iure fugiat dolorem ab. Laborum recusandae aspernatur, obcaecati sed sequi illo?</p>
+                </details>
+                <div class="box box_6">
+                    <div class="unit">1</div>
+                    <div class="unit">2</div>
+                    <div class="unit">3</div>
+                </div>
             </div>
         </div>
-    </div>
+        <div class="propriedade">
+            <h1>align-content</h1>
+            <div class="atributo">
+                <details>
+                    <summary>Flex-start</summary>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deserunt ipsam tempora eligendi? Cupiditate accusantium soluta fugit pariatur vel at iure fugiat dolorem ab. Laborum recusandae aspernatur, obcaecati sed sequi illo?</p>
+                </details>
+                <div class="box box_1">
+                    <div class="unit">1</div>
+                    <div class="unit">2</div>
+                    <div class="unit">3</div>
+                    <div class="unit">4</div>
+                    <div class="unit">5</div>
+                    <div class="unit">6</div>
+                    <div class="unit">7</div>
+                </div>
+            </div>
+            <div class="atributo">
+                <details>
+                    <summary>Center</summary>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deserunt ipsam tempora eligendi? Cupiditate accusantium soluta fugit pariatur vel at iure fugiat dolorem ab. Laborum recusandae aspernatur, obcaecati sed sequi illo?</p>
+                </details>
+                <div class="box box_2">
+                    <div class="unit">1</div>
+                    <div class="unit">2</div>
+                    <div class="unit">3</div>
+                    <div class="unit">4</div>
+                    <div class="unit">5</div>
+                    <div class="unit">6</div>
+                    <div class="unit">7</div>
+                </div>
+            </div>
+            <div class="atributo">
+                <details>
+                    <summary>Flex-end</summary>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deserunt ipsam tempora eligendi? Cupiditate accusantium soluta fugit pariatur vel at iure fugiat dolorem ab. Laborum recusandae aspernatur, obcaecati sed sequi illo?</p>
+                </details>
+                <div class="box box_3">
+                    <div class="unit">1</div>
+                    <div class="unit">2</div>
+                    <div class="unit">3</div>
+                    <div class="unit">4</div>
+                    <div class="unit">5</div>
+                    <div class="unit">6</div>
+                    <div class="unit">7</div>
+                </div>
+            </div>
+            <div class="atributo">
+                <details>
+                    <summary>Space-around</summary>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deserunt ipsam tempora eligendi? Cupiditate accusantium soluta fugit pariatur vel at iure fugiat dolorem ab. Laborum recusandae aspernatur, obcaecati sed sequi illo?</p>
+                </details>
+                <div class="box box_4">
+                    <div class="unit">1</div>
+                    <div class="unit">2</div>
+                    <div class="unit">3</div>
+                </div>
+            </div>
+            <div class="atributo">
+                <details>
+                    <summary>Space-between</summary>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deserunt ipsam tempora eligendi? Cupiditate accusantium soluta fugit pariatur vel at iure fugiat dolorem ab. Laborum recusandae aspernatur, obcaecati sed sequi illo?</p>
+                </details>
+                <div class="box box_5">
+                    <div class="unit">1</div>
+                    <div class="unit">2</div>
+                    <div class="unit">3</div>
+                </div>
+            </div>
+            <div class="atributo">
+                <details>
+                    <summary>Space-evenly</summary>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deserunt ipsam tempora eligendi? Cupiditate accusantium soluta fugit pariatur vel at iure fugiat dolorem ab. Laborum recusandae aspernatur, obcaecati sed sequi illo?</p>
+                </details>
+                <div class="box box_6">
+                    <div class="unit">1</div>
+                    <div class="unit">2</div>
+                    <div class="unit">3</div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="rigthSection">
+
+    </section>
 </body>
 </html>
