--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <section class="leftSection">
-        <div class="propriedade">
+        <div class="justify-content">
             <h1>justify-content</h1>
             <div class="atributo">
                 <details>
@@ -90,7 +90,7 @@
                 </div>
             </div>
         </div>
-        <div class="propriedade">
+        <div class="align-content">
             <h1>align-content</h1>
             <div class="atributo">
                 <details>
